--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>메인은 그래도 진행!</h1>
+    <h1>메인은 계속적으로 브랜치 영향없이 진행됨.</h1>
   </body>
 </html>
