충돌이 날거야..

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>메인은 그래도 진행!</h1>
-    <p>???</p>
+    <p>충돌이 날거야...</p>
   </body>
 </html>
