--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>충돌이 날까?</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <h1>메인은 계속적으로 브랜치 영향없이 진행됨.</h1>
-=======
-    <h1>메인은 그래도 진행!</h1>
-    <p>???</p>
->>>>>>> new_feature
+    <p>메인 브랜치 입니다.</p>
   </body>
 </html>
